--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@neondatabase/serverless": "^0.10.4",
     "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-popover": "^1.1.5",
+    "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.7",
@@ -22,8 +23,8 @@
     "drizzle-orm": "^0.39.1",
     "firebase": "^11.2.0",
     "lucide-react": "^0.474.0",
-    "next": "15.1.6",
-    "react": "^18.0.0",
+    "next": "^15.3.2",
+    "react": "^19.1.0",
     "react-dom": "^18.0.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
