--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "next": "^15.3.2",
     "react": "^19.1.0",
     "react-dom": "^18.0.0",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
